openshift/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-v002-service
spec:
  selector:
    app: backend-v002
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
