openshift/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-v002-route
spec:
  to:
    kind: Service
    name: backend-v002-service
  port:
    targetPort: 80
  tls:
    termination: edge
